fix full page spacing issue and search gigs

--- a/src/pages/FullPage/fullPage.css
+++ b/src/pages/FullPage/fullPage.css
@@ -6,6 +6,7 @@
 
 #FPPadding {
     padding-top: 56px; 
+    margin-left: 36px;
 }
 
 #FPPageHeader {
